--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -2005,7 +2005,7 @@
       </notes>
       <segment>
         <source>Es hat dich bisher noch niemand eingeladen.</source>
-        <target>Pour l'instant personne ne vous envoyé d'invitation.</target>
+        <target>Pour l'instant personne ne vous a envoyé d'invitation.</target>
       </segment>
     </unit>
     <unit id="3NHVIj9" name="Name">
