--- a/translations/items+intl-icu.en.xlf
+++ b/translations/items+intl-icu.en.xlf
@@ -5995,7 +5995,7 @@
       </notes>
       <segment>
         <source>Viele seltsame Gestalten haben diese stinkende Mütze schon getragen, und trotzdem geht dein Herz auf, als du sie aufsetzt.</source>
-        <target>A hat which have been used as a nest by several generations of pigeons and other malodourous wildlife. The interior lining of dried droppings gives it a strange texture... and makes your head itch when you put it on.</target>
+        <target>A hat which have been used as a nest by several generations of pigeons and other malodorous wildlife. The interior lining of dried droppings gives it a strange texture... and makes your head itch when you put it on.</target>
       </segment>
     </unit>
     <unit id="5tx1Ts1">
