--- a/translations/items+intl-icu.de.xlf
+++ b/translations/items+intl-icu.de.xlf
@@ -5839,5 +5839,11 @@
         <target>Erhalten:</target>
       </segment>
     </unit>
+    <unit id="yUEkyOu" name="Dir fällt kein Grund ein, dies zu tun...">
+      <segment>
+        <source>Dir fällt kein Grund ein, dies zu tun...</source>
+        <target>Dir fällt kein Grund ein, dies zu tun...</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
