--- a/translations/items+intl-icu.fr.xlf
+++ b/translations/items+intl-icu.fr.xlf
@@ -228,7 +228,7 @@
       </notes>
       <segment>
         <source>Verstellbarer Schraubenschlüssel</source>
-        <target>Clef à Molette</target>
+        <target>Clé à Molette</target>
       </segment>
     </unit>
     <unit id="xKt9A2O" name="Schraubenzieher">
@@ -7812,7 +7812,7 @@
       </notes>
       <segment>
         <source>Logbuch Schokolade</source>
-        <target>Bûche en chocolat</target>
+        <target>Bûche de Noël</target>
       </segment>
     </unit>
     <unit id="WSBb1y.">
