Bugfixes and debug implementation

--- a/translations/council+intl-icu.de.xlf
+++ b/translations/council+intl-icu.de.xlf
@@ -892,7 +892,7 @@
     <unit id="ilZ07q2">
       <segment>
         <source>{winner} wurde zum Führer gewählt. Hoffen wir, dass er uns aus diesem Schlamassel heraushelfen kann...</source>
-        <target>{winner} wurde zum Führer gewählt. Hoffen wir, dass er uns aus diesem Schlamassel heraushelfen kann...</target>
+        <target>{winner} wurde zum Reiseleiter gewählt. Hoffen wir, dass er uns aus diesem Schlamassel heraushelfen kann...</target>
       </segment>
     </unit>
   </file>
