Fix 1 english typo

--- a/translations/council+intl-icu.en.xlf
+++ b/translations/council+intl-icu.en.xlf
@@ -896,7 +896,7 @@
       </notes>
       <segment>
         <source>Wir alle wissen ja, wie das enden wird, zumindest die meisten von uns... Wir sollten also einen neuen Schamanen wählen, damit er sich um unsere Seelen kümmern und den letzten ersetzen kann, der, wie ich sagen muss, ein verdammt guter Voodooman war!</source>
-        <target>Now we all know how this gonna end, least most of us do... So T say we elect a new shaman so that he can take care of our souls and replace the last one, who was, I have to say, one hell of a voodooman!</target>
+        <target>Now we all know how this gonna end, least most of us do... So I say we elect a new shaman so that he can take care of our souls and replace the last one, who was, I have to say, one hell of a voodooman!</target>
       </segment>
     </unit>
     <unit id="UB7tInO">
