--- a/translations/council+intl-icu.de.xlf
+++ b/translations/council+intl-icu.de.xlf
@@ -382,7 +382,7 @@
     <unit id="Ru.eARx" name="Klar Einstein, Kopf oder Zahl zm eine Persion aus 34 auszuwählen.">
       <segment>
         <source>Klar Einstein, Kopf oder Zahl zm eine Persion aus 34 auszuwählen.</source>
-        <target>Klar Einstein, Kopf oder Zahl zm eine Persion aus 34 auszuwählen.</target>
+        <target>Klar Einstein, Kopf oder Zahl um eine Persion aus 34 auszuwählen.</target>
       </segment>
     </unit>
     <unit id="DH.9rz3" name="Hast du denn eine Münze?">
