--- a/translations/council+intl-icu.en.xlf
+++ b/translations/council+intl-icu.en.xlf
@@ -635,16 +635,6 @@
         <target>Why don't we toss a coin for a change?</target>
       </segment>
     </unit>
-    <unit id="Ru.eARx" name="Klar Einstein, Kopf oder Zahl zm eine Persion aus 34 auszuwählen.">
-      <notes>
-        <note category="german">Klar Einstein, Kopf oder Zahl zm eine Persion aus 34 auszuwählen.</note>
-        <note category="from">db://CouncilEntryTemplate</note>
-      </notes>
-      <segment>
-        <source>Klar Einstein, Kopf oder Zahl zm eine Persion aus 34 auszuwählen.</source>
-        <target>Yeah genius, heads or tales to pick 1 person out of 34.</target>
-      </segment>
-    </unit>
     <unit id="DH.9rz3" name="Hast du denn eine Münze?">
       <notes>
         <note category="german">Hast du denn eine Münze?</note>
@@ -1502,6 +1492,93 @@
       <segment>
         <source>{winner} wurde zum Führer gewählt. Hoffen wir, dass er uns aus diesem Schlamassel heraushelfen kann...</source>
         <target>{winner} has been elected as the Guide, let's hope they can help get us out of this mess...</target>
+      </segment>
+    </unit>
+    <unit id="AraAi_U" name="Klar Einstein, Kopf oder Zahl zm eine Persion aus {_voted} auszuwählen.">
+      <notes>
+        <note category="german">Klar Einstein, Kopf oder Zahl zm eine Persion aus {_voted} auszuwählen.</note>
+        <note category="from">db://CouncilEntryTemplate</note>
+      </notes>
+      <segment>
+        <source>Klar Einstein, Kopf oder Zahl zm eine Persion aus {_voted} auszuwählen.</source>
+        <target>Yeah genius, heads or tales to pick 1 person out of {_voted}.</target>
+      </segment>
+    </unit>
+    <unit id="bz7XUkS">
+      <notes>
+        <note category="german">Gut, alles was ich jetzt noch zu tun habe ist mich selbst zum Schamanen zu wählen. Endlich gibt es mal ein einstimmiges Ergebnis.</note>
+        <note category="from">db://CouncilEntryTemplate</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Gut, alles was ich jetzt noch zu tun habe ist mich selbst zum Schamanen zu wählen. Endlich gibt es mal ein einstimmiges Ergebnis.</source>
+        <target>Gut, alles was ich jetzt noch zu tun habe ist mich selbst zum Schamanen zu wählen. Endlich gibt es mal ein einstimmiges Ergebnis.</target>
+      </segment>
+    </unit>
+    <unit id="a1vKnRs">
+      <notes>
+        <note category="german">Gut, wenn niemand etwas dagegen einzuwenden hat, dann ernenne ich mich hiermit selbst zum Reiseleiter in der Außenwelt!</note>
+        <note category="from">db://CouncilEntryTemplate</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Gut, wenn niemand etwas dagegen einzuwenden hat, dann ernenne ich mich hiermit selbst zum Reiseleiter in der Außenwelt!</source>
+        <target>Gut, wenn niemand etwas dagegen einzuwenden hat, dann ernenne ich mich hiermit selbst zum Reiseleiter in der Außenwelt!</target>
+      </segment>
+    </unit>
+    <unit id="wa_fviX">
+      <notes>
+        <note category="german">Niemand ist mehr in der Stadt, keiner kann diese Versammlung halten, daher überspringen wir die Wahl zum Schamanen.</note>
+        <note category="from">db://CouncilEntryTemplate</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Niemand ist mehr in der Stadt, keiner kann diese Versammlung halten, daher überspringen wir die Wahl zum Schamanen.</source>
+        <target>Niemand ist mehr in der Stadt, keiner kann diese Versammlung halten, daher überspringen wir die Wahl zum Schamanen.</target>
+      </segment>
+    </unit>
+    <unit id="7IXrDK6">
+      <notes>
+        <note category="german">Niemand ist mehr in der Stadt, keiner kann diese Versammlung halten, daher überspringen wir die Wahl zum Reiseleiter in der Außenwelt.</note>
+        <note category="from">db://CouncilEntryTemplate</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Niemand ist mehr in der Stadt, keiner kann diese Versammlung halten, daher überspringen wir die Wahl zum Reiseleiter in der Außenwelt.</source>
+        <target>Niemand ist mehr in der Stadt, keiner kann diese Versammlung halten, daher überspringen wir die Wahl zum Reiseleiter in der Außenwelt.</target>
+      </segment>
+    </unit>
+    <unit id="kSlgIIW" name="Allen steht die Erschöpfung ins Gesicht geschrieben.">
+      <notes>
+        <note category="german">Allen steht die Erschöpfung ins Gesicht geschrieben.</note>
+        <note category="from">db://CouncilEntryTemplate</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Allen steht die Erschöpfung ins Gesicht geschrieben.</source>
+        <target>Allen steht die Erschöpfung ins Gesicht geschrieben.</target>
+      </segment>
+    </unit>
+    <unit id="OTSv8r.">
+      <notes>
+        <note category="german">Wir ziehen Strohhalme, wie wir es immer machen. Der Kürzeste gewinnt. Kommt schon, kommt und zieht einen Stohhalm.</note>
+        <note category="from">db://CouncilEntryTemplate</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Wir ziehen Strohhalme, wie wir es immer machen. Der Kürzeste gewinnt. Kommt schon, kommt und zieht einen Stohhalm.</source>
+        <target>Wir ziehen Strohhalme, wie wir es immer machen. Der Kürzeste gewinnt. Kommt schon, kommt und zieht einen Stohhalm.</target>
+      </segment>
+    </unit>
+    <unit id="0LsI1XY">
+      <notes>
+        <note category="german">OK, es sind nicht mehr viele von uns übrig, also lasst uns das schnell hinter uns bringen.</note>
+        <note category="from">db://CouncilEntryTemplate</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>OK, es sind nicht mehr viele von uns übrig, also lasst uns das schnell hinter uns bringen.</source>
+        <target>OK, es sind nicht mehr viele von uns übrig, also lasst uns das schnell hinter uns bringen.</target>
       </segment>
     </unit>
   </file>
