--- a/translations/council+intl-icu.en.xlf
+++ b/translations/council+intl-icu.en.xlf
@@ -1530,55 +1530,61 @@
       <notes>
         <note category="german">Niemand ist mehr in der Stadt, keiner kann diese Versammlung halten, daher überspringen wir die Wahl zum Schamanen.</note>
         <note category="from">db://CouncilEntryTemplate</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Niemand ist mehr in der Stadt, keiner kann diese Versammlung halten, daher überspringen wir die Wahl zum Schamanen.</source>
-        <target>Niemand ist mehr in der Stadt, keiner kann diese Versammlung halten, daher überspringen wir die Wahl zum Schamanen.</target>
+        <target>There is noone left in town, noone to hold this assembly, so today we're just going to skip the election of the Shaman.</target>
       </segment>
     </unit>
     <unit id="7IXrDK6">
       <notes>
         <note category="german">Niemand ist mehr in der Stadt, keiner kann diese Versammlung halten, daher überspringen wir die Wahl zum Reiseleiter in der Außenwelt.</note>
         <note category="from">db://CouncilEntryTemplate</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Niemand ist mehr in der Stadt, keiner kann diese Versammlung halten, daher überspringen wir die Wahl zum Reiseleiter in der Außenwelt.</source>
-        <target>Niemand ist mehr in der Stadt, keiner kann diese Versammlung halten, daher überspringen wir die Wahl zum Reiseleiter in der Außenwelt.</target>
+        <target>There is noone left in town, noone to hold this assembly, so today we're just going to skip the election of the Guide to the World Beyond.</target>
       </segment>
     </unit>
     <unit id="kSlgIIW" name="Allen steht die Erschöpfung ins Gesicht geschrieben.">
       <notes>
         <note category="german">Allen steht die Erschöpfung ins Gesicht geschrieben.</note>
         <note category="from">db://CouncilEntryTemplate</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Allen steht die Erschöpfung ins Gesicht geschrieben.</source>
-        <target>Allen steht die Erschöpfung ins Gesicht geschrieben.</target>
+        <target>Fatigue on the other hand is front and center...</target>
       </segment>
     </unit>
     <unit id="OTSv8r.">
       <notes>
         <note category="german">Wir ziehen Strohhalme, wie wir es immer machen. Der Kürzeste gewinnt. Kommt schon, kommt und zieht einen Stohhalm.</note>
         <note category="from">db://CouncilEntryTemplate</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Wir ziehen Strohhalme, wie wir es immer machen. Der Kürzeste gewinnt. Kommt schon, kommt und zieht einen Stohhalm.</source>
-        <target>Wir ziehen Strohhalme, wie wir es immer machen. Der Kürzeste gewinnt. Kommt schon, kommt und zieht einen Stohhalm.</target>
+        <target>We'll do the straw like we usually do. Shorts straw gets it. Come on now, come pick a straw.</target>
       </segment>
     </unit>
     <unit id="0LsI1XY">
       <notes>
         <note category="german">OK, es sind nicht mehr viele von uns übrig, also lasst uns das schnell hinter uns bringen.</note>
         <note category="from">db://CouncilEntryTemplate</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>OK, es sind nicht mehr viele von uns übrig, also lasst uns das schnell hinter uns bringen.</source>
-        <target>OK, es sind nicht mehr viele von uns übrig, also lasst uns das schnell hinter uns bringen.</target>
+        <target>OK, there's not many of us left, so let's get this over and done with.</target>
+      </segment>
+    </unit>
+    <unit id="0fqtP6p">
+      <notes>
+        <note category="german">Hm hm ... Ich will ja kein Spielverderber sein, aber wir sind noch nicht wirklich fertig...</note>
+        <note category="from">db://CouncilEntryTemplate</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Hm hm ... Ich will ja kein Spielverderber sein, aber wir sind noch nicht wirklich fertig...</source>
+        <target>Hm hm ... Ich will ja kein Spielverderber sein, aber wir sind noch nicht wirklich fertig...</target>
       </segment>
     </unit>
   </file>
