--- a/translations/global+intl-icu.de.xlf
+++ b/translations/global+intl-icu.de.xlf
@@ -2565,5 +2565,11 @@
         <target>Offiziell</target>
       </segment>
     </unit>
+    <unit id="Ehx7Tyt">
+      <segment>
+        <source>Wir MÜSSEN Verteidigungsanlagen bauen. Falls Ressourcen dafür fehlen, geh in die Außenwelt (die Wüste außerhalb der Stadt) und suche danach.</source>
+        <target>Wir MÜSSEN Verteidigungsanlagen bauen. Falls Ressourcen dafür fehlen, geh in die Außenwelt (die Wüste außerhalb der Stadt) und suche danach.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
