--- a/translations/items+intl-icu.de.xlf
+++ b/translations/items+intl-icu.de.xlf
@@ -5839,5 +5839,11 @@
         <target>Dir fällt kein Grund ein, dies zu tun...</target>
       </segment>
     </unit>
+    <unit id="4Exhdnj" name="Dies kannst du erst ab &lt;strong&gt;Tag 2&lt;/strong&gt; tun.">
+      <segment>
+        <source>Dies kannst du erst ab &lt;strong&gt;Tag 2&lt;/strong&gt; tun.</source>
+        <target><![CDATA[Dies kannst du erst ab <strong>Tag 2</strong> tun.]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
