--- a/translations/items+intl-icu.de.xlf
+++ b/translations/items+intl-icu.de.xlf
@@ -5845,5 +5845,11 @@
         <target><![CDATA[Dies kannst du erst ab <strong>Tag 2</strong> tun.]]></target>
       </segment>
     </unit>
+    <unit id="u9sIc_x">
+      <segment>
+        <source>Wenn du den Plan studieren willst, musst du in die relative Ruhe der Stadt zurückkehren.</source>
+        <target>Wenn du den Plan studieren willst, musst du in die relative Ruhe der Stadt zurückkehren.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
