--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -9388,5 +9388,15 @@
         <target><![CDATA[Dies kannst du erst ab <strong>Tag 2</strong> tun.]]></target>
       </segment>
     </unit>
+    <unit id="u9sIc_x">
+      <notes>
+        <note category="german">Wenn du den Plan studieren willst, musst du in die relative Ruhe der Stadt zurückkehren.</note>
+        <note category="from">db://Requirement</note>
+      </notes>
+      <segment>
+        <source>Wenn du den Plan studieren willst, musst du in die relative Ruhe der Stadt zurückkehren.</source>
+        <target>Debes encontrarte cómodo, en el pueblo, para estudiar ese plano.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
