--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -26075,5 +26075,15 @@
         <target>Charlas sobre el Almacén</target>
       </segment>
     </unit>
+    <unit id="DN3_mKM">
+      <notes>
+        <note category="german">Allen Widrigkeiten zum Trotz scheint es {citizen} gelungen zu sein, in der Zone etwas zu finden, mit dem er überleben kann...</note>
+        <note category="from">db://LogEntryTemplate</note>
+      </notes>
+      <segment>
+        <source>Allen Widrigkeiten zum Trotz scheint es {citizen} gelungen zu sein, in der Zone etwas zu finden, mit dem er überleben kann...</source>
+        <target>¿Quién lo hubiera creído?, {citizen} parece haber encontrado algo para sobrevivir...</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
