--- a/translations/global+intl-icu.de.xlf
+++ b/translations/global+intl-icu.de.xlf
@@ -2571,5 +2571,23 @@
         <target>Wir MÜSSEN Verteidigungsanlagen bauen. Falls Ressourcen dafür fehlen, geh in die Außenwelt (die Wüste außerhalb der Stadt) und suche danach.</target>
       </segment>
     </unit>
+    <unit id="nsoY7Vf" name="{n} neue Beiträge in">
+      <segment>
+        <source>{n} neue Beiträge in</source>
+        <target>{n} neue Beiträge in</target>
+      </segment>
+    </unit>
+    <unit id="o_0krUA" name="{n} oder mehr neue Beiträge in">
+      <segment>
+        <source>{n} oder mehr neue Beiträge in</source>
+        <target>{n} oder mehr neue Beiträge in</target>
+      </segment>
+    </unit>
+    <unit id=".YY5QFh" name="und andere.">
+      <segment>
+        <source>und andere.</source>
+        <target>und andere.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
